<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rolling-map</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="mukund199823@gmail.com">kratos</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Core build + run dependencies -->
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>rclcpp_action</depend>
  <depend>lifecycle_msgs</depend>
  <depend>message_filters</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>angles</depend>
  <depend>eigen3_cmake_module</depend>

  <!-- PCL-related (optional but recommended for ROS integration) -->
  <build_depend>pcl_conversions</build_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <build_depend>pcl_msgs</build_depend>
  <exec_depend>pcl_msgs</exec_depend>

  <build_depend>Eigen3</build_depend>
  <exec_depend>Eigen3</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
